feat: Adding Email Service

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "JwtKey": "XLZ8cTzQyQcor1EK5Fu6liQbOHZ0dxDEyj6112KlxoFAu0v4bH",
+  "ApiKeyName": "api_key",
+  "ApiKey": "teste_iQbOHZ0dxDEyj6112KlxoFAu0v4bH",
+  "Smtp": {
+    "Host": "smtp-relay.brevo.com",
+    "Port": 587,
+    "UserName": "77f595001@smtp-brevo.com",
+    "Password": "7t3YckHrjILVpg6x"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
