feat: Debug and Release enviroment, getting better connectionString on appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Env": "prod",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost,3306;database=blog;User ID=root;Password="
+  },
   "JwtKey": "XLZ8cTzQyQcor1EK5Fu6liQbOHZ0dxDEyj6112KlxoFAu0v4bH",
   "ApiKeyName": "api_key",
   "ApiKey": "teste_iQbOHZ0dxDEyj6112KlxoFAu0v4bH",
